# physicsplay

./: .gitignore  .gitignore.in  .gitmodules  GNUmakefile  LICENSE  README  README.txt  cdfEmbedExample.html  cuda.txt  index.html  myMathematica.html
archives/: fromGoogleSites.pl
bin.archive/: cb
cpuinfo/: elfaux.C
del2xml/: Makefile  del2xml  del2xml.cpp  del2xml.perl  runsamples.sh  sample.csv  sample2.csv  sample3.csv
env/: .aspell.en.prepl  .aspell.en.pws  .bashrc.peeter  .clang-format  .oldvimrc  .screenrc  .tmux.conf  .vimrc  _vimrc  bash.macbook  bash_aliases.kali  bash_aliases.tmux  bash_aliases.ubuntu_12_04_32bit  bash_aliases.ubuntu_12_10_64bit  bash_aliases.vim  bash_aliases.wsl2  bashrc_pjoot  ctags  gdbearlyinit  gdbinit  mypowershell.ps1  profile_powershell.ps1
gaJuliaFractal/: Makefile  glut_util.h  juliaFractal.cpp
gdb_separate_debug_info/: copyDebugAndStrip  makefile  u.cpp
gitcleaning/: bigtosmall.missing.txt.REMOVED.git-id  bigtosmall.missing.txt.f  bigtosmall.missing.txt.f.REMOVED.git-id  history2.sh  toclean.txt  toclean.txt.REMOVED.git-id
iter/: k.cc
julia/: Makefile
lambda/: t1.cc
mathematica/: GNUmakefile  peeters.m
minkowski/: min.C
misc/: laptopSoftware.txt
notes/: .make_pdflatex  DONE.txt  GNUmakefile  Geometric_Algebra.htm  METADATA  METADATA.REMOVED.git-id  Makefile  TODO  TODO.done  TODO.txt  abbrvurl.bst.REMOVED.git-id  advancedantennaLectureN.tex  advancedantennaProblemSetN.tex  advancedantennaProblemSetNProblemM.tex  (+83 more)
programming/module/cmake/: CMakeLists.txt  c.sh  hello.cppm  hello_impl.cpp  main.cpp
(+6333 files in other folders)
